RESOLVED FIXED174171
[iOS DnD] [WK2] 3D touch fails to recognize when UIDragInteraction is enabled on phone
https://bugs.webkit.org/show_bug.cgi?id=174171
Summary [iOS DnD] [WK2] 3D touch fails to recognize when UIDragInteraction is enabled...
Wenson Hsieh
Reported 2017-07-05 13:12:18 PDT
Attachments
Patch (2.81 KB, patch)
2017-07-05 13:23 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-07-05 13:23:40 PDT
WebKit Commit Bot
Comment 2 2017-07-05 14:40:34 PDT
Comment on attachment 314648 [details] Patch Clearing flags on attachment: 314648 Committed r219157: <http://trac.webkit.org/changeset/219157>
WebKit Commit Bot
Comment 3 2017-07-05 14:40:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.